# RTDink

./: .gitignore  AGENTS.md  CMakeLists.txt  INSTALL.md  Info.plist  LICENSE.md  LaunchScreen.storyboard  MainWindow.xib  README.md  RTMindWall copy-Info.plist  app_info_setup.bat  linux_setup.sh
AndroidGradle/: BuildAndInstallDebug.bat  BuildAndInstallRelease.bat  LogCat.bat  LogCatAll.bat  PrepareResources.bat  build.gradle
AndroidGradle/app/: build.gradle
AndroidGradle/app/src/main/: AndroidManifest.xml
AndroidGradle/app/src/main/cpp/: CMakeLists.txt
AndroidGradle/gradle/wrapper/: gradle-wrapper.properties
OSX/: Info.plist  readme.txt
OSX/English.lproj/: InfoPlist.strings  MainMenu.xib
OSX/RTDink.xcodeproj/: project.pbxproj
RTDink.xcodeproj/: project.pbxproj
RTDink/Images.xcassets/AppIcon.appiconset/: Contents.json
Resources-iPad/: MainWindow-iPad.xib
android/: AndroidManifest.xml
flatpak/: apply_extra.sh  com.rtsoft.DinkSmallwoodHD.desktop  com.rtsoft.DinkSmallwoodHD.json  com.rtsoft.DinkSmallwoodHD.metainfo.xml  dink-smallwood-hd.sh
html5/: BuildAndUploadBeta.bat  CustomMain4-3AspectRatioTemplate.html  UploadToWebsite.bat  UploadToWebsiteBeta.bat  build_release.bat
media/: update_media.bat
media/interface/: center_ball.rttex  checkbox.rttex  dink_ad.rttex  ds_ad.rttex  fling_ad.rttex  font_big.fnt  font_big.rtfont  font_big.txt  font_bigx2.fnt  font_bigx2.rtfont  font_bigx2.txt  font_normal.fnt  font_normal.rtfont  font_normal.txt  font_normalx2.fnt  font_normalx2.rtfont  font_normalx2.txt  mindwall_ad.rttex  sixtybeat_ad.rttex  turn_arrows.rttex
media/interface/android/: quicktip_dmod.rttex
media/interface/generic/: quicktip_dmod.rttex
media/interface/ipad/: arrows.rttex  bg_stone_overlay.rttex  bkgd_anim_fire.rttex  bkgd_stone.rttex  logo_dink.rttex  logo_rtsoft.rttex  main_but_about.rttex  main_but_addon10.rttex  main_but_continue.rttex  main_but_load.rttex  main_but_new.rttex  main_but_options.rttex  main_but_quit.rttex  update_media.bat
media/interface/iphone/: arrows.rttex  bg_stone_overlay.rttex  bkgd_anim_fire.rttex  browse_dmod_bar.rttex  browse_install.rttex  button_arrow_back.rttex  button_arrow_down.rttex  button_arrow_up.rttex  button_examine.rttex  button_inventory.rttex  button_item_base.rttex  button_item_no.rttex  button_magic_base.rttex  button_magic_no.rttex  button_quickload.rttex  button_quicksave.rttex  dmod_bar.rttex  dmod_delete_button.rttex  dmod_info_button.rttex  logo_dink.rttex  logo_rtsoft.rttex  main_but_about.rttex  main_but_addon10.rttex  main_but_continue.rttex  main_but_load.rttex  main_but_new.rttex  main_but_options.rttex  pause_icon.rttex  pop_up.rttex  pop_up_button.rttex  quicktip_dmod.rttex  quicktip_feeding.rttex  quicktip_saving.rttex  speed_up_button.rttex
media/interface/iphone4/: arrows.rttex  bg_stone_overlay.rttex  logo_dink.rttex  logo_rtsoft.rttex  main_but_about.rttex  main_but_addon10.rttex  main_but_continue.rttex  main_but_load.rttex  main_but_new.rttex  main_but_options.rttex
media/interface/large/: browse_dmod_bar.rttex  browse_install.rttex  button_arrow_back.rttex  button_arrow_down.rttex  button_arrow_up.rttex  button_examine.rttex  button_inventory.rttex  button_item_base.rttex  button_item_no.rttex  button_magic_base.rttex  button_magic_no.rttex  button_quickload.rttex  button_quicksave.rttex  dmod_bar.rttex  dmod_delete_button.rttex  dmod_info_button.rttex  pause_icon.rttex  pop_up.rttex  pop_up_button.rttex  quicktip_dmod.rttex  quicktip_feeding.rttex  quicktip_saving.rttex  speed_up_button.rttex
media/interface/osx/: quicktip_dmod.rttex
media/interface/win/: quicktip_dmod.rttex  quicktip_feeding.rttex  quicktip_saving.rttex
patches/: proton-linux-missing-stubs.patch  proton-rttex-png-fallback.patch
script/: BuildAndPackageMac.sh  BuildAndPackageWindows.bat  BuildAndPackageWindowsBeta.bat  BuildAndroidAndUploadBeta.bat  BuildFlatpak.bat  BuildMac.bat  FTPToSiteWin.bat  TestLinux.bat  TestMac.bat  TestWindows.bat  UploadMacVersion.bat  UploadOSX_DMG.bat  UploadWindowsVersion.bat  UploadWindowsVersionAsBeta.bat  ZipMac_RTAddHocVersion.bat
script/win_installer/: dink.nsi  readme.txt
source/: App.cpp  App.h  AutoTester.cpp  AutoTester.h  PlatformPrecomp.h  video_gl.cpp  video_gl.h
source/Component/: ActionButtonComponent.cpp  ActionButtonComponent.h  CursorComponent.cpp  CursorComponent.h  DragControlComponent.cpp  DragControlComponent.h  EmulatedPointerComponent.cpp  EmulatedPointerComponent.h  FPSControlComponent.cpp  FPSControlComponent.h  InventoryComponent.cpp  InventoryComponent.h
source/GUI/: AboutMenu.cpp  BrowseMenu.cpp  BrowseMenu.h  DMODInstallMenu.cpp  DMODInstallMenu.h  DMODMenu.cpp  DMODMenu.h  DebugMenu.cpp  DebugMenu.h  EnterURLMenu.cpp  EnterURLMenu.h  ExpiredMenu.cpp  ExpiredMenu.h  GameMenu.cpp  GameMenu.h  LoadMenu.cpp  LoadMenu.h  LogMenu.cpp  LogMenu.h  MainMenu.cpp  MainMenu.h  OptionsMenu.cpp  OptionsMenu.h  ParticleTestMenu.cpp  PauseMenu.cpp  PauseMenu.h  PopUpMenu.cpp  PopUpMenu.h  QuickTipMenu.cpp  QuickTipMenu.h  ReadTextMenu.cpp  ReadTextMenu.h
source/StackWalker/: StackUtils.cpp  StackUtils.h  StackWalker.cpp  StackWalker.h  StackWalker_stub.h
source/dink/: FFReader.cpp  FFReader.h  ScriptAccelerator.cpp  ScriptAccelerator.h  dink.cpp  dink.h  dinkvar.h  misc_util.cpp  misc_util.h  resource.h
windows_vs2017/: iPhoneRTDink.sln  resource.h  winRTDink.rc  winRTDink.vcproj  winRTDink.vcxproj  winRTDink.vcxproj.filters
